projects/compiler/test/typechecker/bindingdecl/error_export_bad_scope.out
Error at %FILE_NAME%:2:3
Invalid visibility modifier
  |    pub val a = 1
       ^
Exported values may only appear at the top level scope in a module
