projects/compiler/test/typechecker/bindingdecl/error_export_bad_scope.abra
if true {
  pub val a = 1
}